# keyword_competition_duck

./: .env.example  .gitignore  CLAUDE.md  proxies.txt.example  pyproject.toml  requirements.txt  user_agents.txt.example
.claude/agents/qa-pipeline-verifier/: AGENT.md
.claude/skills/checkpoint-db-skill/: SKILL.md
.claude/skills/ddg-measure-skill/: SKILL.md
.claude/skills/export-result-skill/: SKILL.md
.claude/skills/file-io-skill/: SKILL.md
.claude/skills/keyword-normalizer-skill/: SKILL.md
.claude/skills/qa-runner-skill/: SKILL.md
.claude/skills/title-match-validator-skill/: SKILL.md
docs/: claude-doc-writing-guideline.txt  config-and-cli.md  database-schema.md  file-list.md  glossary.md  google-api-setup-guide.md  google-blocking-rules.md  implementation-sequence.md  input-output-contract.md  llm-vs-script-boundary.md  logging-spec.md  module-contracts.md  original-design.md  project-operating-guide.md  qa-plan.md  source-requirements-map.md  workflow-and-failure-policy.md
output/qa/: glm_websearch_results.json
src/kcpc/: __init__.py  checkpoint_db.py  config.py  exceptions.py  exporter.py  file_io.py  glm_web_search.py  logging_config.py  main.py  measurer.py  normalizer.py  pipeline.py  qa_analyzer.py  qa_report.py  qa_tester.py  qa_verifier.py  signal_handler.py  title_validator.py
src/kcpc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: integration_real_ddg.md  test_file_parsing.py  test_title_validator.py
